# agentscore

./: .gitignore  CLAUDE.md  LICENSE  README.ko.md  README.md  README.zh.md  pyproject.toml
agentscore/: cli.py  i18n.py  models.py
agentscore/checker/: github_fetcher.py  impact_simulator.py  tool_classifier.py
agentscore/data/: tool_registry.json
agentscore/evaluator/: base.py  config_quality.py  conflict.py  context_efficiency.py  coverage.py  freshness.py  security.py
agentscore/history/: diff.py  store.py
agentscore/profile/: detector.py  profiles.py
agentscore/reporter/: check_reporter.py  history_reporter.py  terminal.py
agentscore/scanner/: config_reader.py  plugin_scanner.py
docs/: DESIGN.md  PRD.md
tests/: test_classifier.py  test_evaluators.py  test_smoke.py
