[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentscore"
version = "0.1.0"
description = "Lighthouse for AI agent development environments"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "httpx>=0.27",
]

[project.scripts]
agentscore = "agentscore.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentscore*"]

[tool.setuptools.package-data]
agentscore = ["data/*.json"]
